--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ DB_HOST=localhost
 DB_USER=root
 DB_NAME=aade
 DB_PASSWORD=panathinaikos
+MHTRWO_USERNAME=TECH3652022-
+MHTRWO_PASSWORD=Tech3652022!
+SOAP_ENDPOINT=https://www1.gsis.gr/wsaade/RgWsPublic2/RgWsPublic2
