--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
@@ -20,6 +21,7 @@
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.3",
     "sequelize": "^6.37.3",
-    "soap": "^1.0.3"
+    "soap": "^1.0.3",
+    "xml2js": "^0.6.2"
   }
 }
