--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_PASSWORD=panathinaikos
 MHTRWO_USERNAME=TECH3652022-
 MHTRWO_PASSWORD=Tech3652022!
 SOAP_ENDPOINT=https://www1.gsis.gr/wsaade/RgWsPublic2/RgWsPublic2
+SEND_INVOICE_MY_DATA=https://mydataapidev.aade.gr/SendInvoices
